--- a/DESCRIPTION.en_us.html
+++ b/DESCRIPTION.en_us.html
@@ -1,1 +1,5 @@
-<p>A skinny font that fits in little places. This is one of my first fonts I released online.</p>
+<p>
+  A skinny font that fits in little places.
+This is one of my first fonts I released online.
+</p>
+
